Make sure phi inputs are held live and have unique stack slots (bug 716149, r=sstangl).