js/src/ion/GreedyAllocator.h
@@ -312,6 +312,7 @@ class GreedyAllocator
     bool allocateInstruction(LBlock *block, LInstruction *ins);
     bool buildPhiMoves(LBlock *block);
     bool findLoopCarriedUses(LBlock *block);
+    void findLoopCarriedUses(LInstruction *ins, uint32 lowerBound, uint32 upperBound);
 
     VirtualRegister *otherHalfOfNunbox(VirtualRegister *vreg);
     VirtualRegister *getVirtualRegister(LDefinition *def) {
